# creativecoding-technovit

./: .gitignore  README.md  pyproject.toml
app/my-app/: package-lock.json
conway/: Space.py  VoxelCell.py  conway.blend  conway.mtl  conway_simple.blend  generate.py
renders/: clip1.mkv  clip2.mkv
solver/: Space.py  generate.py  main.py  utils.py
three_js/: index.html
