[tool.poetry]
name = "creativecoding-technovit"
version = "0.1.0"
description = ""
authors = ["Christo <christotantony2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
black = "^22.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
